[package]
name = "bevy-rapier-sim-time"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29.1"
bevy_rapier3d = { version = "0.28.0", features = ["simd-stable", "debug-render-3d"] }
